--- a/app/src/main/res/layout/grditm_plant.xml
+++ b/app/src/main/res/layout/grditm_plant.xml
@@ -1,14 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="16dp">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/TV_grditm_plant_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="107dp"
-        tools:layout_editor_absoluteY="50dp" />
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/TV_grditm_plant_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="@+id/TV_grditm_plant_name"
+        app:layout_constraintStart_toStartOf="@+id/TV_grditm_plant_name"
+        app:layout_constraintTop_toBottomOf="@+id/TV_grditm_plant_name" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/FAB_grditm_plant_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="8dp"
+        android:clickable="true"
+        android:src="@android:drawable/ic_delete"
+        android:tint="#00BCD4"
+        app:backgroundTint="@color/DRK_ACC1"
+        app:fabCustomSize="32dp"
+        app:layout_constraintBottom_toBottomOf="@+id/TV_grditm_plant_type"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/TV_grditm_plant_name"
+        app:layout_constraintTop_toTopOf="@+id/TV_grditm_plant_name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
