added some stuff

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
         android:id="@+id/RCLVW_plants"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/BTN_newplant"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/TV_main_plantcnt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,19 +21,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="Button"
+        android:backgroundTint="@color/DRK_ACC3"
+        android:text="Mach neu"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.62"
-        app:layout_constraintStart_toEndOf="@+id/TV_main_plantcnt" />
+        app:layout_constraintStart_toStartOf="@+id/TV_main_plantcnt" />
 
     <TextView
         android:id="@+id/TV_main_plantcnt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginBottom="16dp"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="@+id/BTN_newplant"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/BTN_newplant"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/BTN_water"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:backgroundTint="@color/DRK_GRAYOUT"
+        android:text="mmh wortor"
+        app:layout_constraintStart_toEndOf="@+id/BTN_newplant"
         app:layout_constraintTop_toTopOf="@+id/BTN_newplant" />
+
+    <Button
+        android:id="@+id/BTN_fertilize"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:backgroundTint="@color/DRK_GRAYOUT"
+        android:text="Dung"
+        app:layout_constraintStart_toEndOf="@+id/BTN_water"
+        app:layout_constraintTop_toTopOf="@+id/BTN_water" />
 </androidx.constraintlayout.widget.ConstraintLayout>
