--- a/app/src/main/res/layout/grditm_plant.xml
+++ b/app/src/main/res/layout/grditm_plant.xml
@@ -6,22 +6,39 @@
     android:layout_height="wrap_content"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/TV_grditm_plant_name"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/FAB_grditm_plant_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="TextView"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="8dp"
+        android:clickable="true"
+        android:src="@android:drawable/ic_menu_edit"
+        android:tint="#00BCD4"
+        app:backgroundTint="@color/DRK_ACC1"
+        app:fabCustomSize="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/TV_grditm_plant_name"
+        app:layout_constraintTop_toTopOf="@+id/IV_grditm_plant_profpic" />
 
     <TextView
-        android:id="@+id/TV_grditm_plant_type"
-        android:layout_width="wrap_content"
+        android:id="@+id/TV_grditm_plant_name"
+        android:layout_width="96dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/IV_grditm_plant_profpic" />
+
+    <TextView
+        android:id="@+id/TV_grditm_plant_type"
+        android:layout_width="96dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/TV_grditm_plant_name"
         app:layout_constraintStart_toStartOf="@+id/TV_grditm_plant_name"
         app:layout_constraintTop_toBottomOf="@+id/TV_grditm_plant_name" />
@@ -30,15 +47,21 @@
         android:id="@+id/FAB_grditm_plant_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
         android:clickable="true"
         android:src="@android:drawable/ic_delete"
         android:tint="#00BCD4"
         app:backgroundTint="@color/DRK_ACC1"
         app:fabCustomSize="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/TV_grditm_plant_type"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/TV_grditm_plant_name"
-        app:layout_constraintTop_toTopOf="@+id/TV_grditm_plant_name" />
+        app:layout_constraintEnd_toEndOf="@+id/FAB_grditm_plant_edit"
+        app:layout_constraintStart_toStartOf="@+id/FAB_grditm_plant_edit"
+        app:layout_constraintTop_toBottomOf="@+id/FAB_grditm_plant_edit" />
+
+    <ImageView
+        android:id="@+id/IV_grditm_plant_profpic"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_camera" />
 </androidx.constraintlayout.widget.ConstraintLayout>
