--- a/app/src/main/res/layout/activity_plant.xml
+++ b/app/src/main/res/layout/activity_plant.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/DRK_BG_MAIN"
     tools:context=".PlantActivity">
 
     <TextView
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="TextView"
+        android:textColor="@color/DRK_TXT"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,37 +53,6 @@
         app:layout_constraintStart_toStartOf="@+id/INCL_TITVAL_potsz"
         app:layout_constraintTop_toBottomOf="@+id/INCL_TITVAL_potsz" />
 
-    <ImageView
-        android:id="@+id/IV_plant_profpic"
-        android:layout_width="@dimen/PLANT_PIC_HEIGHT"
-        android:layout_height="@dimen/PLANT_PIC_HEIGHT"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TV_plant_name"
-        app:srcCompat="@android:drawable/ic_menu_camera" />
-
-    <TextView
-        android:id="@+id/TV_plant_log"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Log "
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/BTN_plant_logmode"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/BTN_plant_logmode" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RCLV_plant_log"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/TV_plant_log"
-        app:layout_constraintTop_toBottomOf="@+id/BTN_plant_logmode" />
-
     <include
         android:id="@+id/INCL_TITVAL_ownedsince"
         layout="@layout/incl_title_value"
@@ -89,6 +60,61 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@+id/INCL_TITVAL_actyp"
         app:layout_constraintTop_toBottomOf="@+id/INCL_TITVAL_actyp" />
+
+    <ImageView
+        android:id="@+id/IV_plant_profpic"
+        android:layout_width="@dimen/PLANT_PIC_HEIGHT"
+        android:layout_height="@dimen/PLANT_PIC_HEIGHT"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/DRK_BG_SHADE"
+        android:padding="2dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TV_plant_name"
+        app:srcCompat="@android:drawable/ic_menu_camera" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/DRK_BG_SHADE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/INCL_TITVAL_ownedsince">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/RCLV_plant_log"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/TV_plant_log" />
+
+        <TextView
+            android:id="@+id/TV_plant_log"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="Log "
+            android:textColor="@color/DRK_TXT"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/BTN_plant_logmode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/DRK_ACC5"
+            android:text="switch"
+            app:layout_constraintBottom_toBottomOf="@+id/TV_plant_log"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.88"
+            app:layout_constraintStart_toEndOf="@+id/TV_plant_log"
+            app:layout_constraintTop_toTopOf="@+id/TV_plant_log" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/BTN_plant_showphotos"
@@ -100,17 +126,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/IV_plant_profpic"
         app:layout_constraintTop_toTopOf="@+id/IV_plant_profpic" />
-
-    <Button
-        android:id="@+id/BTN_plant_logmode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="16dp"
-        android:text="switch"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/TV_plant_log"
-        app:layout_constraintTop_toBottomOf="@+id/INCL_TITVAL_ownedsince" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
