--- a/app/src/main/res/layout/activity_plant_roll.xml
+++ b/app/src/main/res/layout/activity_plant_roll.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/DRK_BG_MAIN"
     tools:context=".PlantRollActivity">
 
     <Button
@@ -11,7 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:text="Button"
+        android:backgroundTint="@color/DRK_ACC3"
+        android:text="cheese"
+        android:textColor="@color/DRK_TXT_INV"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/TV_plantroll_photocnt" />
@@ -20,6 +23,7 @@
         android:id="@+id/RCLV_plantroll_photos"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/BTN_plantroll_addphoto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:text="TextView"
+        android:textColor="@color/DRK_TXT"
         app:layout_constraintBottom_toBottomOf="@+id/BTN_plantroll_addphoto"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/BTN_plantroll_addphoto" />
