--- a/app/src/main/res/layout/grditm_plant.xml
+++ b/app/src/main/res/layout/grditm_plant.xml
@@ -28,6 +28,7 @@
         android:layout_marginTop="16dp"
         android:text="TextView"
         android:textAlignment="center"
+        android:textColor="@color/DRK_TXT"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/IV_grditm_plant_profpic" />
@@ -39,6 +40,7 @@
         android:layout_marginTop="16dp"
         android:text="TextView"
         android:textAlignment="center"
+        android:textColor="@color/DRK_TXT"
         app:layout_constraintEnd_toEndOf="@+id/TV_grditm_plant_name"
         app:layout_constraintStart_toStartOf="@+id/TV_grditm_plant_name"
         app:layout_constraintTop_toBottomOf="@+id/TV_grditm_plant_name" />
@@ -50,7 +52,6 @@
         android:layout_marginTop="8dp"
         android:clickable="true"
         android:src="@android:drawable/ic_delete"
-        android:tint="#00BCD4"
         app:backgroundTint="@color/DRK_ACC1"
         app:fabCustomSize="32dp"
         app:layout_constraintEnd_toEndOf="@+id/FAB_grditm_plant_edit"
@@ -61,6 +62,8 @@
         android:id="@+id/IV_grditm_plant_profpic"
         android:layout_width="96dp"
         android:layout_height="96dp"
+        android:background="@color/DRK_BG_SHADE"
+        android:padding="2dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_camera" />
