--- a/app/src/main/res/layout/grditm_plantroll_photo.xml
+++ b/app/src/main/res/layout/grditm_plantroll_photo.xml
@@ -2,13 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/DRK_BG_SHADE"
+    android:padding="4dp"
+    android:paddingBottom="16dp">
 
     <ImageView
         android:id="@+id/IV_grditm_plantroll_photo"
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="@dimen/ROLL_PIC_HEIGHT"
+        android:background="@color/DRK_BG_SHADE"
+        android:padding="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -18,9 +23,11 @@
         android:id="@+id/TV_grditm_plantroll_ts"
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="wrap_content"
+        android:background="@color/DRK_BG_MAIN"
+        android:padding="2dp"
         android:text="TextView"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/DRK_TXT"
         app:layout_constraintEnd_toEndOf="@+id/IV_grditm_plantroll_photo"
         app:layout_constraintStart_toStartOf="@+id/IV_grditm_plantroll_photo"
         app:layout_constraintTop_toBottomOf="@+id/IV_grditm_plantroll_photo" />
