--- a/app/src/main/res/layout/incl_title_value.xml
+++ b/app/src/main/res/layout/incl_title_value.xml
@@ -9,21 +9,25 @@
 
     <TextView
         android:id="@+id/TV_incl_titval_tit"
-        android:layout_width="96dp"
+        android:layout_width="128dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:text="TextView"
+        android:textColor="@color/DRK_TXT"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/TV_incl_titval_val"
-        android:layout_width="128dp"
+        android:layout_width="196dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="TextView"
+        android:textColor="@color/DRK_TXT"
+        android:textSize="16sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/TV_incl_titval_tit"
         app:layout_constraintStart_toEndOf="@+id/TV_incl_titval_tit"
